[package]
name = "wasmsign3"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "wasmsign2 but slh-dsa"

[dependencies]
embedded-io = "0.6.1"
sha3 = { version = "0.10.8", default-features = false }
sha3-literal = "0.1.0"
slh-dsa = { version = "0.0.3", default-features = false }
typenum = "1.18.0"
