[package]
name = "portal-solutions-wasmsign3-module"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "wasmsign2 but slh-dsa"

[dependencies]
embedded-io.workspace = true  # = "0.6.1"
sha3.workspace = true         # = { version = "0.10.8", default-features = false }
sha3-literal.workspace = true # = "0.1.0"
typenum.workspace = true      # = "1.18.0"
